[gd_scene load_steps=8 format=3 uid="uid://d3x2imw43msls"]

[ext_resource type="Script" path="res://Scenes/UI/win_screen.gd" id="1_afsuq"]
[ext_resource type="FontFile" uid="uid://csh6y5qo6krcu" path="res://Assets/Fonts/SymtextFix.ttf" id="1_rsptf"]
[ext_resource type="Texture2D" uid="uid://bjxme0f4fpinx" path="res://Assets/UI/settings_button_background_light.png" id="3_bybtl"]
[ext_resource type="Texture2D" uid="uid://r5kcnyvl57dw" path="res://Assets/UI/settings_button_background_dark.png" id="4_h0yqu"]
[ext_resource type="Texture2D" uid="uid://bjnttqfqpdckx" path="res://Assets/UI/historyLight.png" id="5_ae7wb"]
[ext_resource type="Texture2D" uid="uid://bxbyyy37hpad2" path="res://Assets/UI/history.png" id="6_twsv0"]
[ext_resource type="PackedScene" uid="uid://c2xjo7ascxgms" path="res://Scenes/UI/move_history.tscn" id="7_f82ns"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afsuq")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
color = Color(0.282353, 0.282353, 0.282353, 0.498039)

[node name="Container" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 130.0
offset_right = 3320.0
offset_bottom = 2030.0
color = Color(0.262745, 0.262745, 0.262745, 0.968627)

[node name="YouWon" type="Label" parent="."]
layout_mode = 0
offset_left = 1470.0
offset_top = 180.0
offset_right = 2370.0
offset_bottom = 433.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 170
text = "You Won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Results" type="Label" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 490.0
offset_right = 3170.0
offset_bottom = 610.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 60
text = "-  Results  -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompleteTimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1106.0
offset_top = 675.0
offset_right = 1920.0
offset_bottom = 782.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 76
text = "Complete Time:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1526.0
offset_top = 825.0
offset_right = 1920.0
offset_bottom = 932.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 76
text = "Moves:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CompleteTime" type="Label" parent="."]
layout_mode = 0
offset_left = 2020.0
offset_top = 675.0
offset_right = 2578.0
offset_bottom = 791.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 76
text = "##:##"

[node name="Moves" type="Label" parent="."]
layout_mode = 0
offset_left = 2020.0
offset_top = 825.0
offset_right = 2506.0
offset_bottom = 941.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 76
text = "###"

[node name="BestTimeLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1419.0
offset_top = 1085.0
offset_right = 1921.0
offset_bottom = 1205.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 67
text = "Best time:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BestTime" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 2020.0
offset_top = 1085.0
offset_right = 2519.0
offset_bottom = 1205.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 67
text = "##.##"
vertical_alignment = 1

[node name="BestMovesLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1340.0
offset_top = 1225.0
offset_right = 1921.0
offset_bottom = 1345.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 67
text = "Best Moves:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BestMoves" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 2020.0
offset_top = 1225.0
offset_right = 2449.0
offset_bottom = 1345.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 67
text = "###"
vertical_alignment = 1

[node name="WinRateLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1486.0
offset_top = 1365.0
offset_right = 1921.0
offset_bottom = 1485.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 67
text = "Win Rate:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WinRate" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 2020.0
offset_top = 1365.0
offset_right = 2513.0
offset_bottom = 1485.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 67
text = "##.##%"
vertical_alignment = 1

[node name="StarIndicator" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 670.0
offset_top = 1496.0
offset_right = 3170.0
offset_bottom = 1616.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 60
text = "* = New Record"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CustomGameMessage" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 670.0
offset_top = 1496.0
offset_right = 3170.0
offset_bottom = 1616.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 60
text = "(Custom games do not count in statistics)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGame" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 770.0
offset_top = 1750.0
offset_right = 1470.0
offset_bottom = 1950.0
focus_previous = NodePath("../Replay")
texture_normal = ExtResource("3_bybtl")
texture_pressed = ExtResource("3_bybtl")
texture_hover = ExtResource("4_h0yqu")
texture_focused = ExtResource("4_h0yqu")

[node name="Label" type="Label" parent="NewGame"]
layout_mode = 0
offset_right = 700.0
offset_bottom = 200.0
theme_override_constants/line_spacing = -25
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 70
text = "new random
game"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="NewNumberedGame" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1570.0
offset_top = 1750.0
offset_right = 2270.0
offset_bottom = 1950.0
focus_previous = NodePath("../Replay")
texture_normal = ExtResource("3_bybtl")
texture_pressed = ExtResource("3_bybtl")
texture_hover = ExtResource("4_h0yqu")
texture_focused = ExtResource("4_h0yqu")

[node name="Label" type="Label" parent="NewNumberedGame"]
layout_mode = 0
offset_right = 700.0
offset_bottom = 200.0
theme_override_constants/line_spacing = -25
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 70
text = "new numbered
game"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Replay" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 2370.0
offset_top = 1750.0
offset_right = 3070.0
offset_bottom = 1950.0
focus_next = NodePath("../NewGame")
focus_previous = NodePath("../Resume")
texture_normal = ExtResource("3_bybtl")
texture_pressed = ExtResource("3_bybtl")
texture_hover = ExtResource("4_h0yqu")
texture_focused = ExtResource("4_h0yqu")

[node name="Label" type="Label" parent="Replay"]
layout_mode = 0
offset_right = 700.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("1_rsptf")
theme_override_font_sizes/font_size = 80
text = "Replay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HistoryButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 570.0
offset_top = 180.0
offset_right = 1570.0
offset_bottom = 1180.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("5_ae7wb")
texture_pressed = ExtResource("5_ae7wb")
texture_hover = ExtResource("6_twsv0")

[node name="MoveHistory" parent="." instance=ExtResource("7_f82ns")]
visible = false
layout_mode = 1
offset_left = 1120.0
offset_top = 198.0
offset_right = -1120.0
offset_bottom = -462.0

[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="NewNumberedGame" to="." method="_on_new_numbered_game_pressed"]
[connection signal="pressed" from="Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="HistoryButton" to="." method="_on_history_button_pressed"]
